Reorga, Week to Session

--- a/Session_03/3.01 - NN from scratch.ipynb
+++ b/Session_03/3.01 - NN from scratch.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <font color=\"#003660\">Applied Machine Learning for Text Analysis (M.184.5331)</font>\n",
-    "# <font color=\"#003660\">Week 3: NN from Scratch</font>\n",
+    "# <font color=\"#003660\">Session 3: NN from Scratch</font>\n",
     "# <font color=\"#003660\">Notebook 1: NN with Torch/Numpy</font>\n",
     "\n",
     "<center><br><img width=256 src=\"https://git.uni-paderborn.de/data.analytics.teaching/aml4ta-2020/-/raw/master/resources/dag.png\"/><br></center>\n",
