--- a/Session_08/8.02 - QuestionAnswering.ipynb
+++ b/Session_08/8.02 - QuestionAnswering.ipynb
@@ -174,16 +174,17 @@
     "\n",
     "def preprocessing(row):\n",
     "    \n",
-    "    # Simplify\n",
-    "    regex = # TODO\n",
+    "    # Remove special characters\n",
+    "    regex = re.compile(r'[^a-z0-9\\-\\'\\s]')\n",
     "    \n",
-    "    # Whitespaces\n",
+    "    # Remove multiple spaces\n",
     "    row.context = re.sub(r' +', ' ', re.sub(regex, '', row.context.lower()))\n",
     "    row.question = re.sub(r' +', ' ', re.sub(regex, '', row.question.lower()))\n",
     "    row.answer_text = re.sub(r' +', ' ', re.sub(regex, '', row.answer_text.lower()))\n",
     "    \n",
     "    return row\n",
     "\n",
+    "# Apply preprocessing\n",
     "train = train.apply(preprocessing, axis=1).reset_index(drop=True)\n",
     "val = val.apply(preprocessing, axis=1).reset_index(drop=True)\n",
     "test = test.apply(preprocessing, axis=1).reset_index(drop=True)\n",
@@ -242,10 +243,10 @@
     "# MiniLM (6 layers) -> 'nreimers/MiniLM-L6-H384-uncased'\n",
     "# MiniLM -> https://arxiv.org/pdf/2002.10957.pdf\n",
     "\n",
-    "PATH = # TODO\n",
+    "PATH = 'nreimers/MiniLM-L6-H384-uncased'\n",
     "\n",
     "# Initialize tokenizer\n",
-    "tokenizer = # TODO\n",
+    "tokenizer = AutoTokenizer.from_pretrained(PATH, use_fast=True)\n",
     "\n",
     "# Question\n",
     "sample_question = train.iloc[0]['question']\n",
@@ -329,6 +330,7 @@
     "        return_tensors='pt'\n",
     "    )\n",
     "    \n",
+    "    # Initialize\n",
     "    start_tokens = list()\n",
     "    end_tokens = list()\n",
     "    \n",
@@ -377,7 +379,7 @@
     "# BATCH_SIZE = 24 ~  8 GB RAM (GPU) required! \n",
     "# BATCH_SIZE = 48 ~ 14 GB RAM (GPU) required! \n",
     "\n",
-    "BATCH_SIZE = 24\n",
+    "BATCH_SIZE = 48\n",
     "\n",
     "train_dataloader = dataloader_generator(train, BATCH_SIZE)\n",
     "val_dataloader = dataloader_generator(val, BATCH_SIZE)"
@@ -406,7 +408,11 @@
     "\n",
     "# Import\n",
     "from torch import nn\n",
-    "from transformers import AutoModel\n",
+    "from transformers import AutoModel, logging\n",
+    "\n",
+    "# Disable warnings\n",
+    "logging.set_verbosity_error()\n",
+    "\n",
     "\n",
     "# Define model\n",
     "class QuestionAnswering_Model(nn.Module):\n",
@@ -442,9 +448,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################\n",
+    "###############\n",
     "# Debug model #\n",
-    "#################\n",
+    "###############\n",
     "\n",
     "sample_question = train.iloc[0]['question']\n",
     "sample_context = train.iloc[0]['context']\n",
@@ -464,6 +470,41 @@
     "\n",
     "# Debugging\n",
     "# (if required!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########\n",
+    "# Explore #\n",
+    "# Part 1  #\n",
+    "###########\n",
+    "\n",
+    "# Split\n",
+    "start_logits, end_logits = outputs[0].split(1, dim=-1)\n",
+    "\n",
+    "print(start_logits.shape); print(end_logits.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########\n",
+    "# Explore #\n",
+    "# Part 2  #\n",
+    "###########\n",
+    "\n",
+    "# Get start_position / end_position\n",
+    "start_position = torch.argmax(start_logits)\n",
+    "end_position = torch.argmax(end_logits)\n",
+    "\n",
+    "print(start_position); print(end_position)"
    ]
   },
   {
@@ -585,7 +626,7 @@
     "# Train model #\n",
     "###############\n",
     "\n",
-    "EPOCHS = 3\n",
+    "EPOCHS = 5\n",
     "\n",
     "train_history = list()\n",
     "validation_history = list()\n",
@@ -642,8 +683,8 @@
     "    \n",
     "    print({ 'epoch': epoch, 'training loss': total_loss, 'validation loss': validation_loss})\n",
     "    \n",
-    "#print('\\n>>> DONE!')\n",
-    "#print(f'>>> BEST MODEL (VALIDATION): {best_validation_loss}')"
+    "print('\\n>>> DONE!')\n",
+    "print(f'>>> BEST MODEL (VALIDATION): {best_validation_loss}')"
    ]
   },
   {
@@ -740,7 +781,7 @@
     "        start_logits  = outputs[0]\n",
     "        end_logits = outputs[1]\n",
     "   \n",
-    "    # Get start_position / start_position\n",
+    "    # Get start_position / end_position\n",
     "    start_position = torch.argmax(start_logits.cpu())\n",
     "    end_position = torch.argmax(end_logits.cpu())\n",
     "            \n",
@@ -880,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
