Update 9 - HandsOnSummarization.ipynb

--- a/Session_09/9 - HandsOnSummarization.ipynb
+++ b/Session_09/9 - HandsOnSummarization.ipynb
@@ -88,6 +88,7 @@
     "# Import\n",
     "\n",
     "import torch\n",
+    "import evaluate\n",
     "from datasets import load_dataset\n",
     "from transformers import AutoTokenizer\n",
     "from transformers import AutoModelForSeq2SeqLM\n",
